# python-project-50

./: .coverage  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: pyci.yml
gendiff/: __init__.py  cli.py  generate_difference.py  parser.py  tree.py
gendiff/formatters/: formatt.py  json_format.py  normalize.py  plain_format.py  stylish_format.py
gendiff/json_files/: file1.json  file2.json
gendiff/scripts/: .gendiff.py.swp  file1.json  gendiff.py  generate_difference.py  hello.py
gendiff/yaml_files/: file1.yaml  file2.yaml  file3.yml
tests/: test_gendiff.py
tests/fixtures/: file1.json  file1.yaml  file2.json  file5.json  file6.json  result_json.json
